--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/nrobert444/city-explorer#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "env": "0.0.2",
     "express": "^4.17.1",
     "jest": "^25.1.0",
     "supertest": "^4.0.2"
