--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --detectOpenHandles",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "env": "0.0.2",
     "express": "^4.17.1",
     "jest": "^25.1.0",
+    "superagent": "^5.2.2",
     "supertest": "^4.0.2"
   }
 }
