--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "start": "node app.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "repository": {
