fixed yelp search route

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "env": "0.0.2",
     "express": "^4.17.1",
     "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
     "superagent": "^5.2.2",
     "supertest": "^4.0.2"
   }
